update: basis fix for the dark mode + pokemon dialog states tab content

--- a/src/app/components/pokemon-list/pokemon-list.component.css
+++ b/src/app/components/pokemon-list/pokemon-list.component.css
@@ -23,6 +23,7 @@ h1 {
   width: 10em;
   border-radius: 1em;
   box-shadow: var(--box-shadow);
+  overflow: hidden;
 
   background-color: var(--white);
   position: relative;
@@ -42,12 +43,10 @@ h1 {
   animation: showCard 1.5s ease-in-out;
   position: relative;
   overflow: visible;
-  background-color: var(--fadeed-white);
+  background-color: var(--pokeCard-background);
   backdrop-filter: blur(0.2em);
 
   position: fixed;
-
-  --test: purple;
 }
 
 @keyframes showCard {
@@ -63,7 +62,7 @@ h1 {
 }
 
 .dialog::backdrop {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: var(--pokeCard-backdrop);
 }
 
 .dialog.close {
@@ -77,7 +76,7 @@ h1 {
   display: flex;
   align-items: center;
   text-transform: capitalize;
-  color: var(--pokemons-names-color);
+  color: var(--primary_midnight);
 }
 
 .mainTypeIcon {
@@ -172,7 +171,7 @@ h1 {
 .details {
   grid-row-start: 3;
   grid-column: 1/-1;
-  background-color: var(--white);
+  background-color: var(--pokeCard-ditails-background);
   box-shadow: var(--box-shadow);
   border-radius: 0.4em;
   display: flex;
@@ -191,11 +190,14 @@ h1 {
   background-color: transparent;
   width: 100%;
   border-bottom: solid 0.25em var(--shades-silver);
+  font-weight: 600;
+  color: var(--primary_midnight);
 }
 
-.tabsButtonsContainer button.active {
+/* .tabsButtonsContainer button.active {
   border-bottom-color: var(--primary_purple);
-}
+  color: var(--selected-tab-color);
+} */
 
 .tabContainer {
   grid-area: 4/1/5/-1;
@@ -216,7 +218,7 @@ h1 {
   padding: 0;
   list-style: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   gap: 0.3em;
   position: relative;
 }
@@ -304,12 +306,15 @@ h1 {
 
 .abilitiesTitle {
   grid-area: 3/1/4/-1;
-  height: 1em;
+  height: 1.5em;
   width: 100%;
   text-align: center;
   margin: 0;
   padding: 0.1em 0;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .abilitiesList {
@@ -329,6 +334,69 @@ h1 {
   height: 1.5em;
   text-align: center;
   text-transform: capitalize;
+}
+
+.stateTab {
+  width: 100%;
+  height: 100%;
+  padding: 0.5em;
+  padding-top: 0;
+}
+
+.stateTab ul {
+  width: 100%;
+  height: 100%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.stateTab ul li {
+  height: calc(100% / 6);
+  border-radius: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.5em;
+  position: relative;
+}
+
+.stateTab ul li::before {
+  content: "";
+  width: 100%;
+  height: 0.2em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 1em;
+
+  background-image: linear-gradient(
+    to right,
+    var(--stat-bg-color) var(--color-spread),
+    var(--shades-silver) var(--color-spread)
+  );
+}
+
+.stateTab ul li p {
+  margin: 0;
+  padding: 0;
+  font-size: 0.9em;
+}
+
+.stateTab ul li p:first-of-type {
+  text-transform: capitalize;
+  font-weight: 600;
+  color: var(--primary_midnight);
+}
+
+.stateTab ul li p:last-of-type {
+  font-weight: 400;
+  color: var(--about-details-color);
+  opacity: 0.7;
 }
 
 .closeDialog {
